hakubernetes/efk/cluster-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-operator
  namespace: efk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: elasticsearch-operator
    spec:
      containers:
      - name: operator
        image: upmcenterprises/elasticsearch-operator:0.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet:
            path: /live
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 5
      serviceAccount: elasticsearch-operator
