hakubernetes/efk/elasticsearch.yaml
# RBAC for Access and Security
---
apiVersion: v1
kind: Service
metadata:
  namespace: efk 
  name: elasticsearch
  labels:
    env: devops
spec:
  type: ClusterIP
  selector:
    app: elasticsearch-client
  ports:
  - name: http
    port: 9200
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: efk 
  name: elasticsearch-data
  labels:
    env: devops
spec:
  clusterIP: None
  selector:
    app: elasticsearch-data
  ports:
  - port: 9300
    name: transport
---
apiVersion: v1
kind: Service
metadata:
  namespace: efk 
  name: elasticsearch-discovery
  labels:
    env: devops
spec:
  selector:
    app: elasticsearch-master
  ports:
  - name: transport
    port: 9300
    protocol: TCP

# StatefulSet for Data nodes
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-data
  namespace: efk
  labels:
    app: elasticsearch-data
    env: devops
spec:
  serviceName: elasticsearch-data
  replicas: 3 # scale when desired
  selector:
    matchLabels:
      app: elasticsearch-data
  template:
    metadata:
      labels:
        app: elasticsearch-data
    spec:
      containers:
      - name: elasticsearch-data
        image: txn2/k8s-es:v6.2.3
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: 2048Mi
          requests:
            cpu: 25m
            memory: 1536Mi
        ports:
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: elasticsearch-data-storage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-data-storage
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 20Gi # small for dev / testing

# Deployment for Master Nodes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-master
  namespace: efk
  labels:
    app: elasticsearch-master
    env: devops
spec:
  replicas: 2 # scale as desired (see NUMBER_OF_MASTERS below)
  selector:
    matchLabels:
      app: elasticsearch-master
  template:
    metadata:
      labels:
        app: elasticsearch-master
        env: devops
    spec:
      containers:
      - name: elasticsearch-master
        image: txn2/k8s-es:v6.2.3
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: "1024Mi"
          requests:
            cpu: 25m
            memory: "512Mi"
        ports:
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
      - emptyDir:
          medium: ""
        name: "storage"

# Deployment for Client and Ingest Nodes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-client
  namespace: efk
  labels:
    app: elasticsearch-client
    env: devops
spec:
  replicas: 3 # scale as desired
  selector:
    matchLabels:
      app: elasticsearch-client
  template:
    metadata:
      labels:
        app: elasticsearch-client
        env: devops
    spec:
      containers:
      - name: elasticsearch-client
        image: txn2/k8s-es:v6.2.3
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: "1024Mi"
          requests:
            cpu: 25m
            memory: "512Mi"
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
      - emptyDir:
          medium: ""
        name: "storage"
