hakubernetes/efk/efk-ingress.yaml

# Ingress for dashboard
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: efk-ingress
  namespace: efk
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
spec:
  tls:
  - hosts:
    - kibana-internalk8s.10010sh.cn
    - cerebro-internalk8s.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: kibana-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
  - host: cerebro-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: es-admin-cerebro
          servicePort: 80
